fix(notification): notification icons are misaligned with text in material theme

--- a/packages/material/scss/notification/_variables.scss
+++ b/packages/material/scss/notification/_variables.scss
@@ -10,7 +10,7 @@ $notification-font-family: $font-family !default;
 $notification-font-size: $font-size !default;
 $notification-line-height: ( 20 / 14 ) !default;
 
-$notification-icon-offset: 4px !default;
+$notification-icon-offset: 2px !default;
 $notification-icon-spacing: $icon-spacing !default;
 
 $notification-bg: $component-bg !default;
